# ZenGPU

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  RELEASE.md
.github/workflows/: ci.yml  release.yml
examples/: cube.rs  heavy_compute.rs  hip_compute.rs  laminax_lower_spike.rs  list_devices.rs  op_graph_lower.rs  vec_add.rs
src/: adapter.rs  detect.rs  device.rs  instance.rs  lib.rs  log.rs
zen-window-handle/: Cargo.toml
zen-window-handle/src/: lib.rs
zengpu/: Cargo.toml
zengpu-blas/: Cargo.toml
zengpu-blas/src/: level1.rs  level3.rs  lib.rs
zengpu-compute/: Cargo.toml
zengpu-compute/src/: elementwise.rs  lib.rs  pool.rs
zengpu-conformance/: Cargo.toml
zengpu-conformance/src/: lib.rs
zengpu-conformance/tests/: cpu_vs_vulkan.rs  devarray_elementwise.rs  devarray_matmul.rs
zengpu-cpu/: Cargo.toml
zengpu-cpu/src/: lib.rs
zengpu-cuda/: Cargo.toml  build.rs
zengpu-cuda/src/: api.rs  cuda_stub.c  error.rs  lib.rs  nvrtc_stub.c
zengpu-dx12/: Cargo.toml
zengpu-dx12/src/: lib.rs
zengpu-hal/: Cargo.toml
zengpu-hal/src/: adapter.rs  command.rs  desc.rs  device.rs  error.rs  graphics.rs  handle.rs  lib.rs  request.rs  submission.rs  surface.rs  types.rs
zengpu-hip/: Cargo.toml  build.rs
zengpu-hip/src/: hip_stub.c  hiprtc_stub.c  lib.rs  version.rs
zengpu-metal/: Cargo.toml  build.rs
zengpu-metal/src/: lib.rs
zengpu-spirv/: Cargo.toml
zengpu-spirv-proc/: Cargo.toml
zengpu-spirv-proc/src/: ast.rs  lib.rs  lower.rs  spirv.rs  types.rs
zengpu-spirv/src/: lib.rs
zengpu-spirv/tests/: push_const_derive.rs  zsl_compute.rs  zsl_golden.rs  zsl_native.rs  zsl_vertex_fragment.rs
zengpu-spv/: Cargo.toml
zengpu-spv/src/: decode.rs  disasm.rs  lib.rs  opcodes.rs  validate.rs
zengpu-vulkan/: Cargo.toml
zengpu-vulkan/examples/: cube.rs  pipeline_repro.rs
zengpu-vulkan/src/: adapter.rs  command_list.rs  depth_target.rs  device.rs  frame_graph.rs  instance.rs  lib.rs  offscreen.rs  surface.rs  swapchain.rs  swapchain_2d.rs  swapchain_textured.rs  swapchain_triangle.rs
zengpu-vulkan/src/device/: dispatch.rs  format.rs  graphics.rs  hal_impl.rs  mod.rs  resources.rs
zengpu-zsl/: Cargo.toml
zengpu-zsl/src/: ast.rs  lib.rs  lower.rs  lower_graphics.rs  spirv.rs  types.rs
zengpu-zsl/src/backend/: mod.rs
zengpu-zsl/src/backend/cuda/: compute.rs  mod.rs
zengpu-zsl/src/backend/hip/: compute.rs  mod.rs
zengpu-zsl/src/backend/msl/: compute.rs  graphics.rs  mod.rs
zengpu-zsl/src/backend/spirv/: builder.rs  compute.rs  graphics.rs  graphics_ir.rs  mod.rs
zengpu-zsl/src/frontend/: ast.rs  lex.rs  mod.rs  parse.rs  parser.rs
zengpu-zsl/src/ir/: build.rs  mod.rs  node.rs
zengpu/src/: lib.rs
