# ZenGPU — native-first GPU runtime (graphics + general compute).
# Root is the `zengpu` crate and the workspace root; member crates are added as
# they gain real content (no empty placeholders — plan D8).
[package]
name = "zengpu"
description = "A native-first GPU runtime for Rust — graphics and general compute under one device."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"

[workspace]
resolver = "2"
members = ["zengpu-hal", "zengpu-cpu", "zengpu-vulkan", "zengpu-compute", "zengpu-blas", "zengpu-conformance"]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/SkuldNorniern/ZenGPU"
authors = ["Skuld Norniern <skuldnorniern@gmail.com>"]

[workspace.dependencies]
zengpu-hal = { path = "zengpu-hal", version = "0.0.1" }
zengpu-vulkan = { path = "zengpu-vulkan", version = "0.0.1" }
zengpu-compute = { path = "zengpu-compute", version = "0.0.1" }
zengpu-blas = { path = "zengpu-blas", version = "0.0.1" }
inline-spirv = { version = "0.2", features = ["glsl"] }

[lib]
name = "zengpu"

[dependencies]
zengpu-hal.workspace = true

[dev-dependencies]
zengpu-vulkan.workspace = true
inline-spirv.workspace = true
winit = "0.30"
