# ZenGPU native-first GPU runtime (graphics + general compute).
# Root is the `zengpu` crate and the workspace root; member crates are added as
# they gain real content rather than as empty placeholders.
[package]
name = "zengpu"
description = "A native-first GPU runtime for Rust: graphics and general compute under one device."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[workspace]
resolver = "2"
members = ["zengpu-hal", "zengpu-cpu", "zengpu-vulkan", "zengpu-compute", "zengpu-blas", "zengpu-conformance", "zengpu-spirv", "zengpu-spv", "zengpu-zsl", "zengpu-cuda", "zengpu-metal", "zengpu-hip", "zengpu-dx12"]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/SkuldNorniern/ZenGPU"
homepage = "https://github.com/SkuldNorniern/ZenGPU"
authors = ["Skuld Norniern <skuldnorniern@gmail.com>"]
keywords = ["gpu", "vulkan", "compute", "graphics", "rendering"]
categories = ["graphics", "rendering", "hardware-support", "science"]

[workspace.dependencies]
zengpu-hal = { path = "zengpu-hal", version = "0.0.1" }
zengpu-cpu = { path = "zengpu-cpu", version = "0.0.1" }
zengpu-vulkan = { path = "zengpu-vulkan", version = "0.0.1" }
zengpu-compute = { path = "zengpu-compute", version = "0.0.1" }
zengpu-blas = { path = "zengpu-blas", version = "0.0.1" }
zengpu-spirv = { path = "zengpu-spirv", version = "0.0.1" }
zengpu-spv = { path = "zengpu-spv", version = "0.0.1" }
zengpu-zsl = { path = "zengpu-zsl", version = "0.0.1" }
zengpu-cuda = { path = "zengpu-cuda", version = "0.0.1" }
zengpu-metal = { path = "zengpu-metal", version = "0.0.1" }
zengpu-hip = { path = "zengpu-hip", version = "0.0.1" }
zengpu-dx12 = { path = "zengpu-dx12", version = "0.0.1" }
zen-window-handle = { path = "../zen-window-handle" }
log = "0.4"

[lib]
name = "zengpu"

[features]
default = ["vulkan", "compute"]
# Vulkan backend (graphics + compute). The only GPU backend so far.
vulkan = ["zengpu-vulkan"]
# CPU reference backend: the conformance oracle, not a product fallback.
cpu = ["zengpu-cpu"]
# Device arrays, pooled allocation, and elementwise kernels.
compute = ["zengpu-compute"]
# GEMM compute kernel, on top of `compute`.
blas = ["zengpu-blas", "compute"]
# CUDA Driver API compute backend (NVIDIA GPUs, compute HAL only).
cuda = ["zengpu-cuda"]
# Apple Metal backend (macOS/iOS, graphics + compute).
metal = ["zengpu-metal"]
# AMD ROCm/HIP compute backend (compute HAL only).
hip = ["zengpu-hip"]
# DirectX 12 backend (Windows, graphics + compute).
dx12 = ["zengpu-dx12"]

[dependencies]
zengpu-hal.workspace = true
zengpu-cpu = { workspace = true, optional = true }
zengpu-vulkan = { workspace = true, optional = true }
zengpu-compute = { workspace = true, optional = true }
zengpu-blas = { workspace = true, optional = true }
zengpu-cuda = { workspace = true, optional = true }
zengpu-metal = { workspace = true, optional = true }
zengpu-hip = { workspace = true, optional = true }
zengpu-dx12 = { workspace = true, optional = true }
zengpu-spirv.workspace = true
log.workspace = true

[dev-dependencies]
ash = "0.38"
winit = "0.30"
# Examples bridge winit's raw-window-handle into zen-window-handle; the library
# crates themselves depend only on zen-window-handle.
raw-window-handle = "0.6"
zen-window-handle.workspace = true

# Gate examples on the features they actually need so `cargo test` skips them
# when those features are not enabled (blas is opt-in, not a default).
[[example]]
name = "vec_add"
required-features = ["vulkan"]

[[example]]
name = "heavy_compute"
required-features = ["blas"]

[[example]]
name = "op_graph_lower"
required-features = ["vulkan", "blas"]

[[example]]
name = "cube"
required-features = ["vulkan"]

[package.metadata.docs.rs]
all-features = true
