[package]
name = "zengpu-blas"
description = "ZenGPU BLAS bridge — portable compute-shader GEMM with room for future vendor backends."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
zengpu-hal.workspace = true
zengpu-compute.workspace = true
inline-spirv.workspace = true
