[package]
name = "zengpu-compute"
description = "ZenGPU compute runtime — DeviceArray, pooled allocation, elementwise dispatch (plan §13 / C3)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
zengpu-hal.workspace = true
inline-spirv.workspace = true
