[package]
name = "zengpu-compute"
description = "ZenGPU compute runtime — DeviceArray, pooled allocation, and elementwise dispatch."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
zengpu-hal.workspace = true
inline-spirv.workspace = true
