[package]
name = "zengpu-compute"
description = "ZenGPU compute runtime: DeviceArray, pooled allocation, and elementwise dispatch."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zengpu-hal.workspace = true
zengpu-spirv.workspace = true
