[package]
name = "zengpu-conformance"
description = "ZenGPU conformance harness — validates backend correctness against the CPU oracle."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zengpu-hal.workspace = true

[dev-dependencies]
zengpu-cpu.workspace = true
zengpu-vulkan.workspace = true
zengpu-compute.workspace = true
zengpu-blas.workspace = true
zengpu-spirv.workspace = true
