[package]
name = "zengpu-cpu"
description = "ZenGPU CPU reference backend — the conformance oracle, not a product fallback."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zengpu-hal.workspace = true
