[package]
name = "zengpu-cuda"
description = "ZenGPU CUDA Driver API compute backend (NVIDIA, compute HAL only)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
zengpu-hal.workspace = true
cuda-oxide = "0.4.0"
log.workspace = true

[build-dependencies]
cc = "1"

[dev-dependencies]
zengpu-spirv.workspace = true
