[package]
name = "zengpu-hal"
description = "ZenGPU shared-core foundation: backend-independent types, generational handles, and errors."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zen-window-handle.workspace = true
