[package]
name = "zengpu-hip"
description = "ZenGPU AMD ROCm/HIP compute backend (compute HAL only) — skeleton."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zengpu-hal.workspace = true
log.workspace = true
