[package]
name = "zengpu-metal"
description = "ZenGPU Apple Metal backend (macOS/iOS): graphics + compute."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zengpu-hal.workspace = true
log.workspace = true

# Metal bindings — macOS / iOS only; not compiled on other platforms.
[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.29"

# Native ZSL→MSL shaders for the compute tests.
[dev-dependencies]
zengpu-spirv.workspace = true
