[package]
name = "zengpu-spirv"
description = "ZenGPU shader macro: compile GLSL or ZSL to SPIR-V at build time."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
zengpu-zsl = { path = "../zengpu-zsl", version = "0.0.1" }
zengpu-hal.workspace = true
