[package]
name = "zengpu-spv"
description = "ZenGPU SPIR-V tooling: dependency-free disassembler and structural validator."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
