[package]
name = "zengpu-vulkan"
description = "ZenGPU Vulkan backend: native GPU runtime on Vulkan 1.2+."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
zengpu-hal.workspace = true
zengpu-spv.workspace = true
ash = "0.38"
zen-window-handle.workspace = true
log.workspace = true

# Native ZSL shaders for the in-crate tests and the pipeline_repro example.
[dev-dependencies]
zengpu-spirv.workspace = true
