[package]
name = "zengpu-zsl"
description = "ZenGPU shader proc-macro internals: ZSL parsing and SPIR-V lowering."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

# No external parser deps: ZSL has its own lexer/parser/lowerer over the builtin
# `proc_macro` token stream. (No syn / quote / proc-macro2.)
[dependencies]
