[package]
name = "zengpu"
description = "A native-first GPU runtime for Rust — graphics and general compute under one device."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
zengpu-hal.workspace = true
